Sculpting : Front faces only option doesnt seem to work. #40758

Closed
opened 2014-06-22 18:54:01 +02:00 by Nicolas Longchamps · 9 comments

System Information
Windows 8.1 Pro 8Gb Ram
AMD R9 280x / Catalyst 14.4

Blender Version
Broken : 2.70a --- f93bc76
Broken : 2.71_rc2 --- a19c1be

Short description of error
Front faces only option seems ignored when scultping. Brush will affect backfacing even when option is checked. This happens in both normal sculpt and in Dynamic topology mode. Ive tried using different viewport shading options like backface culling and GLSL vs normal solid view to no effect. Problem persists.

Exact steps for others to reproduce the error
Can create a cube, delete a face so that it is open. Subdivide 3-4 times and apply modifier. Go into Scultp mode. Check front face only option and paint backfacing polygons. Note both front and back facing geometry is affected despite front face only option.

**System Information** Windows 8.1 Pro 8Gb Ram AMD R9 280x / Catalyst 14.4 **Blender Version** Broken : 2.70a --- f93bc76 Broken : 2.71_rc2 --- a19c1be **Short description of error** Front faces only option seems ignored when scultping. Brush will affect backfacing even when option is checked. This happens in both normal sculpt and in Dynamic topology mode. Ive tried using different viewport shading options like backface culling and GLSL vs normal solid view to no effect. Problem persists. **Exact steps for others to reproduce the error** Can create a cube, delete a face so that it is open. Subdivide 3-4 times and apply modifier. Go into Scultp mode. Check front face only option and paint backfacing polygons. Note both front and back facing geometry is affected despite front face only option.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @nlong

Added subscriber: @nlong

Added subscriber: @ygtsvtr

Added subscriber: @ygtsvtr

I can confirm this bug. Yep there seems to be some regression here. Version 2.70a seems to have it I will test with latest build and see if it persists.

EDIT : I have tested version 2.71 - 8cea610

The following brushes seem to work correctly with "front faces only" mode.

Inflate - Mask - Pinch - Smooth

The rest of the brushes apply stroke even from the backside even though "front faces only" option is enabled.

I can confirm this bug. Yep there seems to be some regression here. Version 2.70a seems to have it I will test with latest build and see if it persists. EDIT : I have tested version 2.71 - 8cea610 The following brushes seem to work correctly with "front faces only" mode. Inflate - Mask - Pinch - Smooth The rest of the brushes apply stroke even from the backside even though "front faces only" option is enabled.
Antonis Ryakiotakis was assigned by Sergey Sharybin 2014-06-25 12:27:17 +02:00

Added subscriber: @Sergey

Added subscriber: @Sergey

Looks like for some brushes it is front facing to the normal calculated from the affected area rather than the view vector - note this is not bad (in fact I wanted to code something like that) but having this behave like that is not consistent at all and the name is misleading too. So I will change front facing to use the view direction for all brushes.

Looks like for some brushes it is front facing to the normal calculated from the affected area rather than the view vector - note this is not bad (in fact I wanted to code something like that) but having this behave like that is not consistent at all and the name is misleading too. So I will change front facing to use the view direction for all brushes.

This issue was referenced by dbc04c594b

This issue was referenced by dbc04c594b941247be566f77754f9148235197ae

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit dbc04c594b.

Closed by commit dbc04c594b.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40758
No description provided.